welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:6: error: ')' expected but integer literal found.
else if(Maths.abs(n)>89 && Maths.abs()n<101){
                                        ^nearHundred:6: error: ';' expected but ')' found.
else if(Maths.abs(n)>89 && Maths.abs()n<101){
                                           ^