welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	var f:Boolean=false
if (Maths.abs(n)<90){
	f=false
}
else if(Maths.abs(n)>89 && Maths.abs()n<101){
f=true
}
else if(Maths.abs(n)>100 && Maths.abs(n)<190 {
f=false	
}else if(Maths.abs(n)>189) {
f=true
}
else {f=false}
return f
}